fix on gap in title-card index.html

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -237,7 +237,7 @@ footer {
 
 .title-cards {
     display: grid;
-    gap: 2rem;
+    gap: 1rem;
     height: auto;
     grid-template-columns: 1fr 2fr 0.2fr 2fr 0.2fr 2fr 1fr;
     grid-template-rows: 0.3fr 2fr;
